fix: resolvendo bug